Fix initial position of two icons on overview page
The initial `background-position`s of the lock and dashboard icons on
the overview page were not hiding them like the other icons. This patch
adjusts the initial `background-position` values so that the icons are
out of view when the animation starts.

--- a/djangoproject/scss/_style.scss
+++ b/djangoproject/scss/_style.scss
@@ -1752,7 +1752,7 @@ h2+.list-link-soup {
             }
 
             &.icon-lock {
-                background-position: 144px -206px;
+                background-position: 148px -206px;
 
                 &.inview {
                     background-position: -36px -96px;
@@ -1760,7 +1760,7 @@ h2+.list-link-soup {
             }
 
             &.icon-dashboard {
-                background-position: -360px 201px;
+                background-position: -367px 201px;
 
                 &.inview {
                     background-position: -270px -9px;
